exported basic actions and gave an explicit
rationalized some package names